# Lab08

./: CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  Dockerfile  LICENSE.txt  README.md
.github/: CI.yml
.github/workflows/: CI.yml  release.yml
_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
_build/banking/: Makefile  cmake_install.cmake
_build/formatter_ex_lib/: Makefile  cmake_install.cmake
_build/formatter_lib/: Makefile  cmake_install.cmake
_build/hello_world_application/: Makefile  cmake_install.cmake
_build/solver_application/: Makefile  cmake_install.cmake
_build/solver_lib/: Makefile  cmake_install.cmake
formatter_ex_lib/: CMakeLists.txt  formatter_ex.cpp  formatter_ex.h
formatter_ex_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
formatter_lib/: CMakeLists.txt  formatter.cpp  formatter.h
hello_world_application/: CMakeLists.txt  hello_world.cpp
hello_world_application/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
solver_application/: CMakeLists.txt  equation.cpp
solver_application/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
solver_lib/: CMakeLists.txt  solver.cpp
solver_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
tests/: test.cpp
